src/styles/app.scss
/* ... */
.accordion-icon {
  margin-right: 10px;
}

a {
  cursor: pointer;
}

$input-max-width: 500px;
$input-select: 80px;

.input-select {
  width: $input-select;
}

.range-input {

  @include clearfix;

  editable {
    float: left;
    width: calc(50% + 7.5px);
    max-width: calc(#{$input-max-width} / 2 + 7.5px);
    padding-right: 15px;
  }

  editable:last-child {
    width: calc(50% - 7.5px);
    max-width: calc(#{$input-max-width} / 2 - 7.5px);
    padding-right: 0;
  }
}

.editable-wrap {

  word-wrap: break-word;
  margin-bottom: 15px;

  label {
    font-weight: bold;
    font-size: 14px;
    padding: 0;
    display: block;
  }

  .glyphicon {
    position: inherit;
  }

  input, select, textarea {
    width: 100%;
  }

  button {
    margin-top: 10px;
  }

  textarea {
    height: 118px;
  }

  .content {
    padding-right: 10px;
  }

  .form-control {
    max-width: $input-max-width;

    &.with-button {
      max-width: calc(#{$input-max-width} - #{$input-select});
      width: calc(100% - #{$input-select});
    }
  }
}

modal-body {
  .editable-wrap {

    .form-control {
      max-width: inherit;

      &.with-button {
        max-width: calc(100% - #{$input-select});
        width: calc(100% - #{$input-select});
      }
    }
  }
}

.model-view__sub {
  @include clearfix;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 5px;
  &.row {
    border-top: 1px solid $brand-accent-lighter;
  }
}

subject-view .editable-wrap {
  margin-left: 0px;
}

.breadcrumb {
  margin-bottom: 0;
  border: none;
  font-weight: 400;
  background-color: white;
}

.component {
  border-right: solid 1px #ddd;

  .collapsable {
    font-size: large;
  }

  .collapsable:hover {
    color: $brand-primary;
    cursor: pointer;
  }

  .selection-form {
    min-height: calc(100vh - 134px);
    padding-right: 40px;
    max-width: 1100px;

    property-view .row {
      padding-right: 10px;
    }

    .property-ordering {
      position: absolute;
      left: 50%;

      span {
        font-size: xx-small;
      }
      span:hover {
        color: $brand-primary;
      }

      .glyphicon-chevron-up {
        position: absolute;
        top: -25px;
        color: #bbb;
      }

      .glyphicon-chevron-down {
        position: absolute;
        top: -5px;
        color: #bbb;
      }
    }
  }
}

.visualization-container {
  display: inline-block;
  width: 100%;
  height: calc(100vh - 85px);
  overflow: hidden;
  $enabledColor: #bbb;

  .button {
    position: absolute;
    width: 30px;
    height: 30px;
    margin: 0;
    padding: 8px 7px;
    top: 75px;
    background-color: $brand-accent-light;
    border: 1px solid $brand-accent-light;
    line-height: 0.6;
    color: white;
  }

  .button:hover {
    color: white;
    background-color: $brand-accent-dark;
    border: 1px solid $brand-accent-dark;
    cursor: pointer;
  }

  .zoom-out { left: 25px; }
  .zoom-in { left: 60px; }
  .zoom-fit { left: 95px; }
  .zoom-focus { left: 130px; }
  .focus-in { left: 165px; }
  .focus-indicator {
    @include no-select;
    left: 195px;
    text-align: center;
    line-height: 1;
    &:hover {
      background-color: $brand-accent-dark;
      cursor: default;
    }
  }
  .focus-out { left: 225px; }

  .enabled {
    background-color: $enabledColor;
  }

  .link-tools .tool-remove { display: none }
  .link-tools .tool-options { display: none }
  .link .mark-errors { display: none; }
  .marker-arrowheads { display: none; }
  .uml-class-methods-rect { display: none }

  text {
    font-family: $font-family-base;
    font-weight: normal;
  }

  .uml-class-name-text {
    fill: #fff;
  }

  .uml-class-name-rect {
    fill: $brand-primary;
    stroke: none;
  }

  .uml-class-attrs-rect {
    fill: #f5f5f5;
    stroke: #ddd;
    stroke-width: 1px;
  }

  .element.uml.Class {
    &.background {
      fill-opacity: 0.3;
    }

    > g.shadow .uml-class-name-rect {
      fill: $gray;
    }

    &.selected {
      .uml-class-name-rect {
        fill: #c2606e;
      }
    }
  }

  .link.background {
    fill-opacity: 0.3;

    path {
      stroke: #ddd;
    }
  }
}

visualization-view ajax-loading-indicator {
  width: calc(100% - 12px);
}

.search-results ajax-loading-indicator {
  width: calc(100% - 30px);
}

ajax-loading-indicator {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1000;
  background-color: #ffffff;

  &.inline {
    position: inherit;

    .uil-default-css, img {
      position: relative;
      display: inline-block;
      top: inherit;
      left: calc(50% - 100px);
      margin: inherit;
    }
  }

  .uil-default-css, img {
    position: absolute;
    top: calc(50% - 100px);
    left: calc(50% - 100px);
    margin: 0 auto;
  }
}

ajax-loading-indicator-small {
  float: right;
  padding-right: 10px
}

.selection-form {
  padding: 15px;
}

.component-header {
  background-color: $brand-accent-lighter;
  padding: 15px;
  border-bottom: solid 1px #ddd;
  font-size: 26px;
  h3 {
    margin: 0;
  }
  i {
    font-size: xx-large;
  }
}

.main-header {
  background-color: $brand-accent-lighter;
  padding: 5px 0 5px 5px;

  h2 {
    padding-left: 10px;
    margin-top: 10px;
    .glyphicon {
      font-size: large;
      margin-left: 10px;
    }
  }
}

.fa-user, .fa-users {
  margin-right: 15px;
}

.model-header {
  @extend .main-header;
  cursor: pointer;
}

.main-editable-content {
  @include clearfix;
  padding-bottom: 10px;
}

.modal-dialog {
  &.modal-large {
    width: 90%;
  }
  &.modal-medium {
    width: 60%;
  }
  &.modal-small {
    width: 30%;
  }
  &.modal-adapting {
    width: auto;
    min-width: 30%;
    display: table;
  }
  &.modal-adapting-medium {
    width: auto;
    min-width: 75%;
    display: table;
  }
}

.modal-header i {
  color: $gray-base;
  cursor: pointer;
}

.modal-header {
  border-bottom: none;
}

.modal-footer {
  border-top: none;
}

.bottom {
  border-top: solid 1px #ddd;
}

.nav {
  a:hover {
    cursor: pointer;
  }
}

.navbar {
  min-height: 60px;
}
/* ... */

